2003-03-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03814] fix autoconf
	* acinclude.m4: quote variables
	* Bonus/oldconfigure.sh: configure using old config.param

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03812] fix autoconf
	* acinclude.m4 (AC_W3M_IMAGE): default is autodetect x11,fb

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03810] fix autoconf
	* acinclude.m4 (AC_W3M_EXTLIBS): use $dir
			(AC_W3M_GC): PREFIX is optional
			(AC_W3M_SSL): PREFIX is optional
				with_ssl=yes, check usual dirs
				use $dir
			(AC_W3M_IPv6): use $dir

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03809] fix autoconf
	* acinclude.m4 (AC_W3M_CHECK_VER): accept version like "1.9.13-2"

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 03808] fix autoconf
	* acinclude.m4 (AC_W3M_GC): --with-gc takes PREFIX
				check include first
		(AC_W3M_CHECK_VER): show checking message
		(AC_W3M_IMAGE): if gdkpixbuf found, don't check imlib*

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (MODEL): delete @W3M_TARGET@
	* configure.in: AC_SUBST(W3M_TARGET)

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>	
	
	* which: deleted
	* makeallmomdel: deleted

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>	

	* [w3m-dev 03804] fix autoconf
	* acinclude.m4 (AC_W3M_MENU): default enabled
			(AC_W3M_MOUSE): default enabled
			(AC_W3M_COOKIE): default enabled
			(AC_W3M_LANG): can't detect locale here.
				autoconf set LANG=C
			(AC_W3M_DIGEST_AUTH): default enabled
			(AC_W3M_SSL): default enabled
	* configure.in (AC_W3M_DIGEST_AUTH): added

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03804] fix autoconf
	* config.h.in (EAMCS_LIKE_LINEEDIT): define
		(VI_PREC_NUM): define
		(USE_MARK): define
		(LABEL_TOPLINE): define
		(NEXTPAGE_TOPLINE): define
		(FTPPASS_HOSTNAMEGEN): define
		(SHOW_PARAMS): define
		(VIEW_UNSEENOBJECTS): define
		(ID_EXT): define
